# FastAPI-with-postgress_db

./: README.md
todoapp/: Dockerfile  compose.yaml  pyproject.toml
todoapp/tests/: test_main.py
todoapp/todoapp/: .env  main.py
